<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical"
    android:padding="6dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_right_margin"
        android:layout_marginRight="@dimen/dialog_right_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_header"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="right"
                android:text="به روز رسانی آلاء"
                android:textColor="@color/Black_1"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="right"
            android:text="نسخه جدید آلاء رسید"
            android:textColor="@color/Black_2"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/txtPlayStoreUrl"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button"
                android:clickable="true"
                android:enabled="true"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/playStore"
                android:textColor="@color/White"
                android:focusable="true"
                android:textSize="@dimen/_14sdp" />

            <Button
                android:id="@+id/txtBazaarUrl"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button"
                android:clickable="true"
                android:enabled="true"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/bazaar"
                android:textColor="@color/White"
                android:focusable="true"
                android:textSize="@dimen/_14sdp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/txtDirectUrl"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button"
                android:clickable="true"
                android:enabled="true"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/apkDownload"
                android:textColor="@color/White"
                android:focusable="true"
                android:textSize="@dimen/_14sdp" />


        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>